# metacontrol_sim

./: CMakeLists.txt  README.md  metacontrol_sim.rosinstall  package.xml
action/: MvpReconfiguration.action
config/: test_viz.rviz
launch/: MVP_metacontrol_world.launch  battery_load_control.launch  description2.launch  description_ridgeback.launch  description_ridgeback_yumi.launch  fake_laserscanner_bringup.launch  load_robot.launch  metacontrol_sim_reasoner.launch  ridgeback_world.launch  ridgeback_yumi_world.launch  roboto2_world.launch  roboto_world.launch  visualize_ridgeback.launch  visualize_ridgeback_yumi.launch  visualize_robot.launch
launch/includes/: battery_load_control.launch.xml  description_ridgeback.launch.xml  laser_filters.launch  map_localization.launch.xml  pointcloud_to_laser.launch  rosgraph_nodes.launch.xml  spawn_factory_floor.launch.xml
meshes/workcell/collision/: workcell.dae
rviz/: MVP_viz.rviz  test_viz.rviz  visualize_robot.rviz
scripts/: activate_observer.py  battery_load_control.py  fake_laserscanner.py  objective_error_publisher.py  rosgraph_manipulator.py  safety_distance_publisher.py  send_goal_from_yaml.py
srv/: IncreaseConsumptionFactor.srv
urdf/: ridgeback_yumi.xacro
urdf/ridgeback/: accessories.urdf.xacro  ridgeback.gazebo.xacro  ridgeback.urdf.xacro  ridgeback.xacro
urdf/unknown_obstacle/: unknown_obstacle.urdf
urdf/workcell/: workcell.urdf.xacro  workcell.xacro
worlds/: factory.world  mros.world  ridgeback_race.world
yaml/: goal.yaml  laser_filter_config.yaml  observers.yaml  rosgraph_manipulator_config.yaml
(+4 files in other folders)
